# WarwickCSNotes

./: .dockerignore  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Docs.md  README.md  app.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
Data/Credits/: notes.json  people.json  quizzes.json
Data/Quizzes/: cs331-activation-functions.json  cs331-biological-neurons.json  cs331-document-representation.json  cs331-hopfield-networks.json  cs331-loss-functions.json  cs331-mp-neuron-vs-perceptron.json  cs331-nlp.json  cs331-perceptron-learning.json  cs331-text-preprocessing.json
Data/Resources/Notes/: ApproximationRatio.md  Differentiation.md  GenerativeAdversarialNetworks.md  LossFunctions.md  NaturalLanguageProcessing.md  Perceptron.md  PropositionalLogic.md
Data/Resources/Solutions/: CS130-2023.md  CS130-2024.md
Data/Reviews/: cs130.json
Data/YearData/: year1.json  year2.json  year3.json
Pages/: Module.html  Year.html
YearData/: year1.json
frontend/: README.md  eslint.config.mjs  tsconfig.json
frontend/apps/web/src/components/: ai-summary.tsx  insta-check-toggle.tsx  markdown-content.tsx  navbar.tsx  page-header.tsx  page-section.tsx  page.tsx  quiz-runner.tsx  surface-styles.ts  surface.tsx  theme-provider.tsx  typst-renderer.tsx
frontend/apps/web/src/lib/: use-ai-summary.ts  use-content.ts  use-insta-check.ts
frontend/apps/web/src/pages/: acknowledgements.tsx  careers.tsx  module.tsx  note.tsx  quiz.tsx  quizzes.tsx  resource.tsx  reviews.tsx  welcome.tsx  year.tsx
(+1 files in other folders)
